添加fvm配置、优化一下、尝试解决Method Channel的Reply already submitted问题

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -49,6 +49,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "flutter_accessibility_service_${buildType.name}_V${versionName}.${versionCode}.apk"
+        }
+    }
 }
 
 flutter {
